test/Fail/Issue1976.err
Issue1976.agda:20.1-8: error: [UnequalTerms]
The terms
  A
and
  B
are not equal at type Set
when checking the clause left hand side
F wrong
